--- a/output/posters/isee22/lorenzoF_isee22.html
+++ b/output/posters/isee22/lorenzoF_isee22.html
@@ -131,7 +131,7 @@ padding: 0px;
 }
 .outer {
 width: 33.1in;
-height: calc(46.8in *  (1 - 5.0e-2 - 2.0e-2 - 0.01) );
+height: calc(46.8in *  (1 - 5.0e-2 - 0 - 0.01) );
 -webkit-column-count: 2; /* Chrome, Safari, Opera */
 -moz-column-count: 2; /* Firefox */
 column-count: 2;
@@ -326,8 +326,8 @@ padding: 0cm;
 }
 .main_bottom {
 width: 33.1in;
-height: calc(46.8in * 2.0e-2);
-margin-top: calc(46.8in * (1 - 2.0e-2));
+height: calc(46.8in * 0);
+margin-top: calc(46.8in * (1 - 0));
 position: absolute;
 background-color: #0b4545;
 background-image: linear-gradient(#008080 10%, #0b4545);
@@ -416,6 +416,11 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 </p>
 </div>
 
+<style>
+#main-img-left, #main-img-center, #main-img-right {
+ width: 10%;
+}
+</style>
 <div id="background-objectives" class="section level1">
 <h1>Background &amp; Objectives</h1>
 <ul>
@@ -426,13 +431,10 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 </div>
 <div id="methods" class="section level1">
 <h1>Methods</h1>
-<p><img src="images/design.png" width="100%" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Data: HELIX (Human Early-Life Exposome) Child Panel Study</li>
-<li>Exposures: 22 non-persistent EDCs (10 phthalate, 7 phenol, and 5 organophosphate pesticide metabolites) with repeated measures</li>
-<li>Multi-omic profiles: methylome, serum and urinary metabolome, proteome</li>
 </ul>
-<p><img src="images/methods.png" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="images/study_design.svg" width="100%" style="display: block; margin: auto;" /></p>
 <ul>
 <li>We developed Gaussian Graphical Models (GGMs) based on shrinkage estimates of pairwise partial correlations between EDCs and molecular features in each week</li>
 <li>The obtained networks for the two visits were merged in order to identify reproducible associations</li>
@@ -447,125 +449,29 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 </div>
 <div id="results" class="section level1">
 <h1>Results</h1>
-<div id="study-population" class="section level2">
-<h2>Study population</h2>
-<table>
-<colgroup>
-<col width="39%" />
-<col width="30%" />
-<col width="30%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th align="left"><strong>Characteristic</strong></th>
-<th align="center"><strong>Visit A</strong>, N = 140</th>
-<th align="center"><strong>Visit B</strong>, N = 143</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"><strong>Cohort</strong></td>
-<td align="center"></td>
-<td align="center"></td>
-</tr>
-<tr class="even">
-<td align="left">BIB</td>
-<td align="center">27 (19%)</td>
-<td align="center">27 (19%)</td>
-</tr>
-<tr class="odd">
-<td align="left">EDEN</td>
-<td align="center">23 (16%)</td>
-<td align="center">23 (16%)</td>
-</tr>
-<tr class="even">
-<td align="left">KANC</td>
-<td align="center">27 (19%)</td>
-<td align="center">26 (18%)</td>
-</tr>
-<tr class="odd">
-<td align="left">RHEA</td>
-<td align="center">29 (21%)</td>
-<td align="center">29 (20%)</td>
-</tr>
-<tr class="even">
-<td align="left">SAB</td>
-<td align="center">34 (24%)</td>
-<td align="center">38 (27%)</td>
-</tr>
-<tr class="odd">
-<td align="left"><strong>Sex</strong></td>
-<td align="center"></td>
-<td align="center"></td>
-</tr>
-<tr class="even">
-<td align="left">female</td>
-<td align="center">60 (43%)</td>
-<td align="center">61 (43%)</td>
-</tr>
-<tr class="odd">
-<td align="left">male</td>
-<td align="center">80 (57%)</td>
-<td align="center">82 (57%)</td>
-</tr>
-<tr class="even">
-<td align="left"><strong>Age</strong></td>
-<td align="center">6.97 (6.44, 8.85)</td>
-<td align="center">7.55 (6.93, 9.62)</td>
-</tr>
-<tr class="odd">
-<td align="left"><strong>Ethnicity</strong></td>
-<td align="center"></td>
-<td align="center"></td>
-</tr>
-<tr class="even">
-<td align="left">Caucasian</td>
-<td align="center">129 (92%)</td>
-<td align="center">132 (92%)</td>
-</tr>
-<tr class="odd">
-<td align="left">Pakistani</td>
-<td align="center">10 (7.1%)</td>
-<td align="center">10 (7.0%)</td>
-</tr>
-<tr class="even">
-<td align="left">Other</td>
-<td align="center">1 (0.7%)</td>
-<td align="center">1 (0.7%)</td>
-</tr>
-<tr class="odd">
-<td align="left"><strong>zBMI</strong></td>
-<td align="center">0.28 (-0.34, 1.09)</td>
-<td align="center">0.26 (-0.34, 1.09)</td>
-</tr>
-<tr class="even">
-<td align="left"><strong>Season</strong></td>
-<td align="center"></td>
-<td align="center"></td>
-</tr>
-<tr class="odd">
-<td align="left">autumn</td>
-<td align="center">35 (25%)</td>
-<td align="center">38 (27%)</td>
-</tr>
-<tr class="even">
-<td align="left">spring</td>
-<td align="center">50 (36%)</td>
-<td align="center">49 (34%)</td>
-</tr>
-<tr class="odd">
-<td align="left">summer</td>
-<td align="center">20 (14%)</td>
-<td align="center">8 (5.6%)</td>
-</tr>
-<tr class="even">
-<td align="left">winter</td>
-<td align="center">35 (25%)</td>
-<td align="center">48 (34%)</td>
-</tr>
-</tbody>
-</table>
-</div>
+<!-- ## Study population -->
+<!-- |**Characteristic**        |   **Visit A**, N = 140   |   **Visit B**, N = 143   | -->
+<!-- |:-------------------------|:------------------:|:------------------:| -->
+<!-- |__Cohort__                |                    |                    | -->
+<!-- |BIB                       |      27 (19%)      |      27 (19%)      | -->
+<!-- |EDEN                      |      23 (16%)      |      23 (16%)      | -->
+<!-- |KANC                      |      27 (19%)      |      26 (18%)      | -->
+<!-- |RHEA                      |      29 (21%)      |      29 (20%)      | -->
+<!-- |SAB                       |      34 (24%)      |      38 (27%)      | -->
+<!-- |__Sex__                   |                    |                    | -->
+<!-- |female                    |      60 (43%)      |      61 (43%)      | -->
+<!-- |male                      |      80 (57%)      |      82 (57%)      | -->
+<!-- |__Age__                   | 6.97 (6.44, 8.85)  | 7.55 (6.93, 9.62)  | -->
+<!-- |__Ethnicity__             |                    |                    | -->
+<!-- |Caucasian                 |     129 (92%)      |     132 (92%)      | -->
+<!-- |Pakistani                 |     10 (7.1%)      |     10 (7.0%)      | -->
+<!-- |Other                     |      1 (0.7%)      |      1 (0.7%)      | -->
+<!-- |__zBMI__                  | 0.28 (-0.34, 1.09) | 0.26 (-0.34, 1.09) | -->
+<!-- |__Season__                |                    |                    | -->
+<!-- |autumn                    |      35 (25%)      |      38 (27%)      | -->
+<!-- |spring                    |      50 (36%)      |      49 (34%)      | -->
+<!-- |summer                    |      20 (14%)      |      8 (5.6%)      | -->
+<!-- |winter                    |      35 (25%)      |      48 (34%)      | -->
 <div id="merged-network-reproducible-associations-across-visits" class="section level2">
 <h2>Merged network: reproducible associations across visits</h2>
 <p><img src="images/networks_main.svg" width="100%" style="display: block; margin: auto;" /></p>
@@ -598,7 +504,7 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 <td align="center">Serum metabolome</td>
 <td align="center">Serotonin</td>
 <td align="center">0.052</td>
-<td align="center">Exposure to pesticides linked to changes in the serotonergic system</td>
+<td align="center">Exposure to pesticides linked to changes in the serotonergic system <span class="citation">[1]–[3]</span></td>
 </tr>
 <tr class="even">
 <td align="center">Phenols</td>
@@ -606,7 +512,7 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 <td align="center">Serum metabolome</td>
 <td align="center">Serotonin</td>
 <td align="center">-0.055</td>
-<td align="center">Possible association between personal care product ingredients and serotonin</td>
+<td align="center">Association between personal care product ingredients and serotonin <span class="citation">[4]</span></td>
 </tr>
 <tr class="odd">
 <td align="center">Phthalates</td>
@@ -614,7 +520,7 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 <td align="center">Serum metabolome</td>
 <td align="center">Kynurenine</td>
 <td align="center">-0.056</td>
-<td align="center">Possible mediating effect of quinolic acid on exposure to phthalates and neurological disorders</td>
+<td align="center">Mediating effect of quinolic acid on exposure to phthalates and neurological disorders <span class="citation">[5]</span></td>
 </tr>
 <tr class="even">
 <td align="center">Phenols</td>
@@ -622,7 +528,7 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 <td align="center">Proteome</td>
 <td align="center">Leptin</td>
 <td align="center">-0.066</td>
-<td align="center">Effect of mixtures of phenols and parabens</td>
+<td align="center">Effect of mixtures of phenols and parabens <span class="citation">[6]</span></td>
 </tr>
 </tbody>
 </table>
@@ -638,15 +544,38 @@ Lorenzo Fabbri<sup> a, b, <a class="orcid" href="https://orcid.org/0000-0003-303
 <li>Among the most significant, we found associations between diethyl phosphate and serotonin, triclosan and serotonin, mono‑4‑methyl‑7‑hydroxyoctyl phthalate and kynurenine, triclosan and leptin</li>
 </ul>
 </div>
+<div id="references" class="section level1 unnumbered">
+<h1>References</h1>
+<div id="refs" class="references csl-bib-body">
+<div id="ref-slotkin2008developmental" class="csl-entry">
+<div class="csl-left-margin">[1] </div><div class="csl-right-inline">T. A. Slotkin and F. J. Seidler, <span>“Developmental neurotoxicants target neurodifferentiation into the serotonin phenotype: Chlorpyrifos, diazinon, dieldrin and divalent nickel,”</span> <em>Toxicology and applied pharmacology</em>, vol. 233, no. 2, pp. 211–219, 2008.</div>
+</div>
+<div id="ref-judge2016mechanism" class="csl-entry">
+<div class="csl-left-margin">[2] </div><div class="csl-right-inline">S. J. Judge <em>et al.</em>, <span>“Mechanism for the acute effects of organophosphate pesticides on the adult 5-HT system,”</span> <em>Chemico-biological interactions</em>, vol. 245, pp. 82–89, 2016.</div>
+</div>
+<div id="ref-sarrouilhe2021exposome" class="csl-entry">
+<div class="csl-left-margin">[3] </div><div class="csl-right-inline">D. Sarrouilhe, N. Defamie, and M. Mesnil, <span>“Is the exposome involved in brain disorders through the serotoninergic system?”</span> <em>Biomedicines</em>, vol. 9, no. 10, p. 1351, 2021.</div>
+</div>
+<div id="ref-houten2016changes" class="csl-entry">
+<div class="csl-left-margin">[4] </div><div class="csl-right-inline">S. M. Houten <em>et al.</em>, <span>“Changes in the metabolome in response to low-dose exposure to environmental chemicals used in personal care products during different windows of susceptibility,”</span> <em>PLoS One</em>, vol. 11, no. 7, p. e0159919, 2016.</div>
+</div>
+<div id="ref-nassan2019high" class="csl-entry">
+<div class="csl-left-margin">[5] </div><div class="csl-right-inline">F. L. Nassan, J. A. Gunn, M. M. Hill, B. A. Coull, and R. Hauser, <span>“High phthalate exposure increased urinary concentrations of quinolinic acid, implicated in the pathogenesis of neurological disorders: Is this a potential missing link?”</span> <em>Environmental research</em>, vol. 172, pp. 430–436, 2019.</div>
+</div>
+<div id="ref-lee2022race" class="csl-entry">
+<div class="csl-left-margin">[6] </div><div class="csl-right-inline">S. Lee, C. Karvonen-Gutierrez, B. Mukherjee, W. H. Herman, and S. K. Park, <span>“Race-specific associations of urinary phenols and parabens with adipokines in midlife women: The study of women’s health across the nation (SWAN),”</span> <em>Environmental Pollution</em>, vol. 303, p. 119164, 2022.</div>
+</div>
+</div>
+</div>
 
 </div>
 <div class="main">
 <p>Some of these biological signatures point towards the potential biological effects of OP pesticide and phthalate metabolites on the nervous system</p>
 </div>
 <div class="main_bottom">
-<img id="main-img-left" src=>
+<img id="main-img-left" src=images/logos_sx.svg>
 <img id="main-img-center" src=>
-<img id="main-img-right" src=images/qr.png>
+<img id="main-img-right" src=images/logos_dx.svg>
 </div>
 </div>
 
